# arduino_project

./: .gitignore  README.md
app/: Cargo.toml
app/src/: main.rs
arduino/: arduino.ino
serial_test_arduino/: serial_test_arduino.ino
web_server/: package-lock.json  package.json
web_server/src/: index.js
wireless_module/: wireless_module.ino
