[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
rand = "0.8.5"
reqwest = "0.11.22"
rsautogui = "0.2.2"
serde = "1.0.190"
serialport = "4.2.2"
tokio = { version = "1.33.0", features = ["full"] }
